	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1499)
 * expansion of @variables in read descriptions (TODO: document)
# (r1490,r1491)
 * bugfix: description file reading could crash due to wrong check.
# (r1485)
 * Caption of _caption_over_image will take at most half of the screen.
# (r1484)
 * If _caption_over_image=3, image will be possibly drawn below the caption.
# (r1480)
 * The 'v' and 'S' keys will redraw as well.
# (r1477,r1478)
 * Description line can be of any length (EXPERIMENTAL).
# (r1474)
 * New configure option, defaulting to: --enable-paths-in-man: Generate man pages with configure specified paths (e.g. sysconfdir, docdir).
# (r1468)
 * fix: -s switch was broken.
# (r1447)
 * If no semicolon (;) terminating -C argument, one will be appended.
# (r1417)
 * framebuffer console switch off while loading: configure with the 
   --enable-framebuffer-switch-while-loading switch to have it back.
# (r1413)
 * fix: configure would fail on --disable-aa and absent aalib.
# (r1403)
 * Configure has --enable-seek-magic by default. And is more verbose.
# (r1395,r1396)
 * Command 'help' will also consider key bindings, and give multiple answers if matching.
# (r1389)
 * If further arguments follow switch --help, individual help messages will be shown.
# (r1382)
 * Command 'goto' accepts multiple arguments; those after the first triggering a jump will be ignored.
# (r1379,r1380)
 * Command goto {'-/'|'+/'}[C] will jump to a file based on C (default 'S').
   If C is 's', to prev/next file with same directory name.
   If C is 'd', to prev/next file with directory name down the same hierarchy.
   If C is 'u', to prev/next file with directory name up the same hierarchy.
   If C is 'b', to prev/next file with same basename.
   If C is uppercase, to the prev/next file not matching the criteria.
# (r1381)
 * Accordingly, aliases 'next_file_dir_same', 'next_file_dir_other', 'next_file_dir_up',